# portfolio_analytics

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyrightconfig.json
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260324_0001_initial_schema.py  20260324_0002_add_user_password_hash.py  20260325_0003_add_stytch_user_id.py  20260327_0004_add_demo_user_flag.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  deps.py  health.py  holdings.py  meta.py  portfolios.py  routes.py  snapshots.py  valuations.py  websocket.py
backend/app/core/: config.py  constants.py
backend/app/db/: base.py  redis.py  seed.py  session.py
backend/app/models/: __init__.py  base.py  holding.py  portfolio.py  price_event.py  snapshot.py  user.py
backend/app/schemas/: auth.py  base.py  holding.py  portfolio.py  snapshot.py  valuation.py
backend/app/services/: auth_service.py  demo_service.py  holding_service.py  market_data_service.py  portfolio_service.py  snapshot_service.py  stytch_service.py  valuation_service.py
backend/app/websocket/: __init__.py  manager.py  subscriber.py
backend/app/workers/: __init__.py  market_data_poller.py  simulator.py  valuation_worker.py
backend/tests/: conftest.py  test_api.py  test_auth_api.py  test_schemas.py
frontend/: .env.example  .prettierrc.json  Dockerfile  eslint.config.mjs  next-env.d.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/authenticate/: page.tsx
frontend/components/: AuthPage.tsx  Dashboard.tsx  GitHubRepoLink.tsx  QueryProvider.tsx  StytchAuthPanel.tsx  StytchProvider.tsx  dashboard.tsx  query-provider.tsx
frontend/lib/: api.ts  auth.ts  contracts.ts  query-client.ts  stytch.ts  types.ts
frontend/tests/: setup.ts
frontend/tests/components/: dashboard.test.tsx
frontend/tests/lib/: api.test.ts  contracts.test.ts
