[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-analytics-backend"
version = "0.1.0"
description = "Portfolio analytics MVP backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
